service card left site added

--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emergency Service</title>
+
+    <!-- dasy ui -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+
+    <!-- tailwind css -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
+    <!-- font awesome cdn -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body class="w-[1520px] mx-auto ">
+<body class="w-[1521px] mx-auto ">
     <!-- navbar start  -->
     <nav class="flex justify-between items-center p-10">
         <div class="flex justify-between items-center">
@@ -21,7 +28,7 @@
 
             <div class="flex justify-center items-center rounded-full w-[100px] h-[50px] bg-[#41ff6b1a] gap-3 mr-4">
                 <p class="font-semibold ">0</p>
-                <img class="w-[24px] h-[24px]"  src="./assets/heart.png" alt="">
+                <img class="w-[24px] h-[24px]" src="./assets/heart.png" alt="">
             </div>
 
 
@@ -35,9 +42,203 @@
     <!-- navbar end  -->
 
     <!-- Emergency Service Directory start -->
-
-    
+    <div class="text-center bg-gradient-to-r from-[#013223] via-[#006445] to-[#013223]">
+        <div class="p-10">
+            <img class="mx-auto w-[90px] h-[90px] " src="./assets/logo-dark.png" alt="">
+            <h1 class="font-bold text-3xl text-white my-3">Emergency Service Directory</h1>
+            <p class="text-white ">Government Emergency Services at Your Fingertip – A Project by Government of the
+                People’ s Republic of Bangladesh</p>
+        </div>
+    </div>
     <!-- Emergency Service Directory end -->
+
+    <!-- Service card start  -->
+    <div class="flex ">
+
+        <!-- left site -->
+        <div class="p-10 bg-[#F5FFF6] grid grid-cols-3 grid-rows-2 gap-4 w-[3100px]">
+            <!-- card-1 -->
+            <div class="card bg-[#ffffff] text-neutral-content w-96">
+                <div class="card-body items-start text-center shadow-2xl w-[360px] h-[300px] rounded-lg">
+                    <div class="flex justify-between w-[314px]">
+                        <img class="w-[35px] h-[35p] bg-[#ffe3e2] rounded-md p-1" src="./assets/emergency.png" alt="">
+                        <img class="w-[32px] h-[32p]" src="./assets/heart.png" alt="">
+                    </div>
+                    <h2 class="card-title text-black text-[20px] font-bold mt-2">National Emergency Number</h2>
+                    <p class="text-black text-[17px]">National Emergency</p>
+                    <h1 class=" text-black text-[32px] font-bold mb-0">999</h1>
+                    <p class=" text-black w-[50px] h-[30px] bg-gray-200 rounded-full p-1 mt-0">All</p>
+                    <div class="card-actions gap-5">
+                        <button class="btn w-[145px] h-[40px]"><i class="fa-regular fa-copy"></i> Copy</button>
+
+                        <button class="btn btn-ghost w-[145px] h-[40px] bg-[#00a63e]"><i class="fa-solid fa-phone"></i> Call</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- card-2 -->
+            <div class="card bg-[#ffffff] text-neutral-content w-96">
+                <div class="card-body items-start text-center shadow-2xl w-[360px] h-[300px] rounded-lg">
+                    <div class="flex justify-between w-[314px]">
+                        <img class="w-[35px] h-[35p] bg-[#ffe3e2] rounded-md p-1" src="./assets/police.png" alt="">
+
+                        <img class="w-[32px] h-[32p]" src="./assets/heart.png" alt="">
+                    </div>
+                    <h2 class="card-title text-black text-[20px] font-bold mt-2">Police Helpline Number</h2>
+                    <p class="text-black text-[17px]">Police</p>
+                    <h1 class=" text-black text-[32px] font-bold mb-0">999</h1>
+                    <p class=" text-black w-[60px] h-[30px] bg-gray-200 rounded-full p-1 mt-0">Police</p>
+                    <div class="card-actions gap-5">
+                        <button class="btn w-[145px] h-[40px]"><i class="fa-regular fa-copy"></i> Copy</button>
+
+                        <button class="btn btn-ghost w-[145px] h-[40px] bg-[#00a63e]"><i class="fa-solid fa-phone"></i> Call</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- card-3 -->
+            <div class="card bg-[#ffffff] text-neutral-content w-96">
+                <div class="card-body items-start text-center shadow-2xl w-[360px] h-[300px] rounded-lg">
+                    <div class="flex justify-between w-[314px]">
+                        <img class="w-[35px] h-[35p] bg-[#ffe3e2] rounded-md p-1" src="./assets/fire-service.png" alt="">
+                        <img class="w-[32px] h-[32p]" src="./assets/heart.png" alt="">
+                    </div>
+                    <h2 class="card-title text-black text-[20px] font-bold mt-2">Fire Service Number</h2>
+                    <p class="text-black text-[17px]">Fire Service</p>
+                    <h1 class=" text-black text-[32px] font-bold mb-0">999</h1>
+                    <p class=" text-black w-[50px] h-[30px] bg-gray-200 rounded-full p-1 mt-0">Fire</p>
+                    <div class="card-actions gap-5">
+                        <button class="btn w-[145px] h-[40px]"><i class="fa-regular fa-copy"></i> Copy</button>
+
+                        <button class="btn btn-ghost w-[145px] h-[40px] bg-[#00a63e]"><i class="fa-solid fa-phone"></i> Call</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- card-4 -->
+            <div class="card bg-[#ffffff] text-neutral-content w-96">
+                <div class="card-body items-start text-center shadow-2xl w-[360px] h-[300px] rounded-lg">
+                    <div class="flex justify-between w-[314px]">
+                        <img class="w-[35px] h-[35p] bg-[#ffe3e2] rounded-md p-1" src="./assets/ambulance.png" alt="">
+                        <img class="w-[32px] h-[32p]" src="./assets/heart.png" alt="">
+                    </div>
+                    <h2 class="card-title text-black text-[20px] font-bold mt-2">Ambulance Service</h2>
+                    <p class="text-black text-[17px]">Ambulance</p>
+                    <h1 class=" text-black text-[28px] font-bold mb-0">1994-999999</h1>
+                    <p class=" text-black w-[60px] h-[30px] bg-gray-200 rounded-full p-1 mt-0">Health</p>
+                    <div class="card-actions gap-5">
+                        <button class="btn w-[145px] h-[40px]"><i class="fa-regular fa-copy"></i> Copy</button>
+
+                        <button class="btn btn-ghost w-[145px] h-[40px] bg-[#00a63e]"><i class="fa-solid fa-phone"></i> Call</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- card-5 -->
+            <div class="card bg-[#ffffff] text-neutral-content w-96">
+                <div class="card-body items-start text-center shadow-2xl w-[360px] h-[300px] rounded-lg">
+                    <div class="flex justify-between w-[314px]">
+                        <img class="w-[35px] h-[35p] bg-[#ffe3e2] rounded-md p-1" src="./assets/emergency.png" alt="">
+                        <img class="w-[32px] h-[32p]" src="./assets/heart.png" alt="">
+                    </div>
+                    <h2 class="card-title text-black text-[20px] font-bold mt-2">Women & Child Helpline</h2>
+                    <p class="text-black text-[17px]">Women & Child Helpline</p>
+                    <h1 class=" text-black text-[32px] font-bold mb-0">109</h1>
+                    <p class=" text-black w-[50px] h-[30px] bg-gray-200 rounded-full p-1 mt-0">Help</p>
+                    <div class="card-actions gap-5">
+                        <button class="btn w-[145px] h-[40px]"><i class="fa-regular fa-copy"></i> Copy</button>
+
+                        <button class="btn btn-ghost w-[145px] h-[40px] bg-[#00a63e]"><i class="fa-solid fa-phone"></i> Call</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- card-6 -->
+            <div class="card bg-[#ffffff] text-neutral-content w-96">
+                <div class="card-body items-start text-center shadow-2xl w-[360px] h-[300px] rounded-lg">
+                    <div class="flex justify-between w-[314px]">
+                        <img class="w-[35px] h-[35p] bg-[#ffe3e2] rounded-md p-1" src="./assets/emergency.png" alt="">
+                        <img class="w-[32px] h-[32p]" src="./assets/heart.png" alt="">
+                    </div>
+                    <h2 class="card-title text-black text-[20px] font-bold mt-2">Anti-Corruption Helpline</h2>
+                    <p class="text-black text-[17px]">Anti-Corruption</p>
+                    <h1 class=" text-black text-[32px] font-bold mb-0">106</h1>
+                    <p class=" text-black w-[50px] h-[30px] bg-gray-200 rounded-full p-1 mt-0">Govt.</p>
+                    <div class="card-actions gap-5">
+                        <button class="btn w-[145px] h-[40px]"><i class="fa-regular fa-copy"></i> Copy</button>
+
+                        <button class="btn btn-ghost w-[145px] h-[40px] bg-[#00a63e]"><i class="fa-solid fa-phone"></i> Call</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- card-7 -->
+            <div class="card bg-[#ffffff] text-neutral-content w-96">
+                <div class="card-body items-start text-center shadow-2xl w-[360px] h-[300px] rounded-lg">
+                    <div class="flex justify-between w-[314px]">
+                        <img class="w-[35px] h-[35p] bg-[#ffe3e2] rounded-md p-1" src="./assets/emergency.png" alt="">
+                        <img class="w-[32px] h-[32p]" src="./assets/heart.png" alt="">
+                    </div>
+                    <h2 class="card-title text-black text-[20px] font-bold mt-2">Electricity Helpline</h2>
+                    <p class="text-black text-[17px]">Electricity Outage</p>
+                    <h1 class=" text-black text-[32px] font-bold mb-0">16216</h1>
+                    <p class=" text-black w-[80px] h-[30px] bg-gray-200 rounded-full p-1 mt-0">Electricity</p>
+                    <div class="card-actions gap-5">
+                        <button class="btn w-[145px] h-[40px]"><i class="fa-regular fa-copy"></i> Copy</button>
+
+                        <button class="btn btn-ghost w-[145px] h-[40px] bg-[#00a63e]"><i class="fa-solid fa-phone"></i> Call</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- card-8 -->
+            <div class="card bg-[#ffffff] text-neutral-content w-96">
+                <div class="card-body items-start text-center shadow-2xl w-[360px] h-[300px] rounded-lg">
+                    <div class="flex justify-between w-[314px]">
+                        <img class="w-[35px] h-[35p] bg-[#ffe3e2] rounded-md p-1" src="./assets/brac.png" alt="">
+                        <img class="w-[32px] h-[32p]" src="./assets/heart.png" alt="">
+                    </div>
+                    <h2 class="card-title text-black text-[20px] font-bold mt-2">Brac Helpline</h2>
+                    <p class="text-black text-[17px]">Brac</p>
+                    <h1 class=" text-black text-[32px] font-bold mb-0">16445</h1>
+                    <p class=" text-black w-[50px] h-[30px] bg-gray-200 rounded-full p-1 mt-0">NGO</p>
+                    <div class="card-actions gap-5">
+                        <button class="btn w-[145px] h-[40px]"><i class="fa-regular fa-copy"></i> Copy</button>
+
+                        <button class="btn btn-ghost w-[145px] h-[40px] bg-[#00a63e]"><i class="fa-solid fa-phone"></i> Call</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- card-9 -->
+            <div class="card bg-[#ffffff] text-neutral-content w-96">
+                <div class="card-body items-start text-center shadow-2xl w-[360px] h-[300px] rounded-lg">
+                    <div class="flex justify-between w-[314px]">
+                        <img class="w-[35px] h-[35p] bg-[#ffe3e2] rounded-md p-1" src="./assets/Bangladesh-Railway.png" alt="">
+                        <img class="w-[32px] h-[32p]" src="./assets/heart.png" alt="">
+                    </div>
+                    <h2 class="card-title text-black text-[20px] font-bold mt-2">Bangladesh Railway Helpline </h2>
+                    <p class="text-black text-[17px]">Bangladesh Railway</p>
+                    <h1 class=" text-black text-[32px] font-bold mb-0">163</h1>
+                    <p class=" text-black w-[50px] h-[30px] bg-gray-200 rounded-full p-1 mt-0">Travel</p>
+                    <div class="card-actions gap-5">
+                        <button class="btn w-[145px] h-[40px]"><i class="fa-regular fa-copy"></i> Copy</button>
+
+                        <button class="btn btn-ghost w-[145px] h-[40px] bg-[#00a63e]"><i class="fa-solid fa-phone"></i> Call</button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <!-- right site -->
+        <div class="grid grid-cols-3">
+            <div class="border-2 border-red-500 w-[300px]">
+                
+            </div>
+        </div>
+    </div>
+    <!-- Service card end  -->
 </body>
 
 </html>
