html added without js code

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
     <!-- font awesome cdn -->
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+        integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body class="w-[1521px] mx-auto ">
@@ -71,7 +73,8 @@
                     <div class="card-actions gap-5">
                         <button class="btn w-[145px] h-[40px]"><i class="fa-regular fa-copy"></i> Copy</button>
 
-                        <button class="btn btn-ghost w-[145px] h-[40px] bg-[#00a63e]"><i class="fa-solid fa-phone"></i> Call</button>
+                        <button class="btn btn-ghost w-[145px] h-[40px] bg-[#00a63e]"><i class="fa-solid fa-phone"></i>
+                            Call</button>
                     </div>
                 </div>
             </div>
@@ -91,7 +94,8 @@
                     <div class="card-actions gap-5">
                         <button class="btn w-[145px] h-[40px]"><i class="fa-regular fa-copy"></i> Copy</button>
 
-                        <button class="btn btn-ghost w-[145px] h-[40px] bg-[#00a63e]"><i class="fa-solid fa-phone"></i> Call</button>
+                        <button class="btn btn-ghost w-[145px] h-[40px] bg-[#00a63e]"><i class="fa-solid fa-phone"></i>
+                            Call</button>
                     </div>
                 </div>
             </div>
@@ -100,7 +104,8 @@
             <div class="card bg-[#ffffff] text-neutral-content w-96">
                 <div class="card-body items-start text-center shadow-2xl w-[360px] h-[300px] rounded-lg">
                     <div class="flex justify-between w-[314px]">
-                        <img class="w-[35px] h-[35p] bg-[#ffe3e2] rounded-md p-1" src="./assets/fire-service.png" alt="">
+                        <img class="w-[35px] h-[35p] bg-[#ffe3e2] rounded-md p-1" src="./assets/fire-service.png"
+                            alt="">
                         <img class="w-[32px] h-[32p]" src="./assets/heart.png" alt="">
                     </div>
                     <h2 class="card-title text-black text-[20px] font-bold mt-2">Fire Service Number</h2>
@@ -110,7 +115,8 @@
                     <div class="card-actions gap-5">
                         <button class="btn w-[145px] h-[40px]"><i class="fa-regular fa-copy"></i> Copy</button>
 
-                        <button class="btn btn-ghost w-[145px] h-[40px] bg-[#00a63e]"><i class="fa-solid fa-phone"></i> Call</button>
+                        <button class="btn btn-ghost w-[145px] h-[40px] bg-[#00a63e]"><i class="fa-solid fa-phone"></i>
+                            Call</button>
                     </div>
                 </div>
             </div>
@@ -129,7 +135,8 @@
                     <div class="card-actions gap-5">
                         <button class="btn w-[145px] h-[40px]"><i class="fa-regular fa-copy"></i> Copy</button>
 
-                        <button class="btn btn-ghost w-[145px] h-[40px] bg-[#00a63e]"><i class="fa-solid fa-phone"></i> Call</button>
+                        <button class="btn btn-ghost w-[145px] h-[40px] bg-[#00a63e]"><i class="fa-solid fa-phone"></i>
+                            Call</button>
                     </div>
                 </div>
             </div>
@@ -148,7 +155,8 @@
                     <div class="card-actions gap-5">
                         <button class="btn w-[145px] h-[40px]"><i class="fa-regular fa-copy"></i> Copy</button>
 
-                        <button class="btn btn-ghost w-[145px] h-[40px] bg-[#00a63e]"><i class="fa-solid fa-phone"></i> Call</button>
+                        <button class="btn btn-ghost w-[145px] h-[40px] bg-[#00a63e]"><i class="fa-solid fa-phone"></i>
+                            Call</button>
                     </div>
                 </div>
             </div>
@@ -167,7 +175,8 @@
                     <div class="card-actions gap-5">
                         <button class="btn w-[145px] h-[40px]"><i class="fa-regular fa-copy"></i> Copy</button>
 
-                        <button class="btn btn-ghost w-[145px] h-[40px] bg-[#00a63e]"><i class="fa-solid fa-phone"></i> Call</button>
+                        <button class="btn btn-ghost w-[145px] h-[40px] bg-[#00a63e]"><i class="fa-solid fa-phone"></i>
+                            Call</button>
                     </div>
                 </div>
             </div>
@@ -186,7 +195,8 @@
                     <div class="card-actions gap-5">
                         <button class="btn w-[145px] h-[40px]"><i class="fa-regular fa-copy"></i> Copy</button>
 
-                        <button class="btn btn-ghost w-[145px] h-[40px] bg-[#00a63e]"><i class="fa-solid fa-phone"></i> Call</button>
+                        <button class="btn btn-ghost w-[145px] h-[40px] bg-[#00a63e]"><i class="fa-solid fa-phone"></i>
+                            Call</button>
                     </div>
                 </div>
             </div>
@@ -205,7 +215,8 @@
                     <div class="card-actions gap-5">
                         <button class="btn w-[145px] h-[40px]"><i class="fa-regular fa-copy"></i> Copy</button>
 
-                        <button class="btn btn-ghost w-[145px] h-[40px] bg-[#00a63e]"><i class="fa-solid fa-phone"></i> Call</button>
+                        <button class="btn btn-ghost w-[145px] h-[40px] bg-[#00a63e]"><i class="fa-solid fa-phone"></i>
+                            Call</button>
                     </div>
                 </div>
             </div>
@@ -214,7 +225,8 @@
             <div class="card bg-[#ffffff] text-neutral-content w-96">
                 <div class="card-body items-start text-center shadow-2xl w-[360px] h-[300px] rounded-lg">
                     <div class="flex justify-between w-[314px]">
-                        <img class="w-[35px] h-[35p] bg-[#ffe3e2] rounded-md p-1" src="./assets/Bangladesh-Railway.png" alt="">
+                        <img class="w-[35px] h-[35p] bg-[#ffe3e2] rounded-md p-1" src="./assets/Bangladesh-Railway.png"
+                            alt="">
                         <img class="w-[32px] h-[32p]" src="./assets/heart.png" alt="">
                     </div>
                     <h2 class="card-title text-black text-[20px] font-bold mt-2">Bangladesh Railway Helpline </h2>
@@ -224,7 +236,8 @@
                     <div class="card-actions gap-5">
                         <button class="btn w-[145px] h-[40px]"><i class="fa-regular fa-copy"></i> Copy</button>
 
-                        <button class="btn btn-ghost w-[145px] h-[40px] bg-[#00a63e]"><i class="fa-solid fa-phone"></i> Call</button>
+                        <button class="btn btn-ghost w-[145px] h-[40px] bg-[#00a63e]"><i class="fa-solid fa-phone"></i>
+                            Call</button>
                     </div>
                 </div>
             </div>
@@ -232,10 +245,18 @@
         </div>
 
         <!-- right site -->
-        <div class="grid grid-cols-3">
-            <div class="border-2 border-red-500 w-[300px]">
+        <div class=" grid-cols-3 my-10 w-[300px]">
+            <div class=" w-[300px] h-[50px] flex justify-between items-center">
+                <div class="flex items-center gap-2">
+                    <i class="fa-regular fa-clock"></i>
+                    <h2 class="font-semibold text-[18px]">Call History</h2>
+                </div>
                 
+                <div>
+                    <button class="btn btn-ghost rounded-full w-[80px] h-[40px] text-white bg-[#00a63e]">Clear</button>
+                </div>
             </div>
+
         </div>
     </div>
     <!-- Service card end  -->
