navber heart element count style added

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <div class="flex justify-between items-center ">
 
             <div class="flex justify-center items-center rounded-full w-[100px] h-[50px] bg-[#41ff6b1a] gap-3 mr-4">
-                <p class="font-semibold ">0</p>
-                <img class="w-[24px] h-[24px]" src="./assets/heart.png" alt="">
+                <p id="navbar-heart-count" class="font-semibold ">0</p>
+                <img  class="w-[24px] h-[24px]" src="./assets/heart.png" alt="">
             </div>
 
 
@@ -64,7 +64,7 @@
                 <div class="card-body items-start text-center shadow-2xl w-[360px] h-[300px] rounded-lg">
                     <div class="flex justify-between w-[314px]">
                         <img class="w-[35px] h-[35p] bg-[#ffe3e2] rounded-md p-1" src="./assets/emergency.png" alt="">
-                        <img class="w-[32px] h-[32p]" src="./assets/heart.png" alt="">
+                        <img class="w-[32px] h-[32p] heart-icon" src="./assets/heart.png" alt="">
                     </div>
                     <h2 class="card-title text-black text-[20px] font-bold mt-2">National Emergency Number</h2>
                     <p class="text-black text-[17px]">National Emergency</p>
@@ -85,7 +85,7 @@
                     <div class="flex justify-between w-[314px]">
                         <img class="w-[35px] h-[35p] bg-[#ffe3e2] rounded-md p-1" src="./assets/police.png" alt="">
 
-                        <img class="w-[32px] h-[32p]" src="./assets/heart.png" alt="">
+                        <img class="w-[32px] h-[32p] heart-icon" src="./assets/heart.png" alt="">
                     </div>
                     <h2 class="card-title text-black text-[20px] font-bold mt-2">Police Helpline Number</h2>
                     <p class="text-black text-[17px]">Police</p>
@@ -106,7 +106,7 @@
                     <div class="flex justify-between w-[314px]">
                         <img class="w-[35px] h-[35p] bg-[#ffe3e2] rounded-md p-1" src="./assets/fire-service.png"
                             alt="">
-                        <img class="w-[32px] h-[32p]" src="./assets/heart.png" alt="">
+                        <img class="w-[32px] h-[32p] heart-icon" src="./assets/heart.png" alt="">
                     </div>
                     <h2 class="card-title text-black text-[20px] font-bold mt-2">Fire Service Number</h2>
                     <p class="text-black text-[17px]">Fire Service</p>
@@ -126,7 +126,7 @@
                 <div class="card-body items-start text-center shadow-2xl w-[360px] h-[300px] rounded-lg">
                     <div class="flex justify-between w-[314px]">
                         <img class="w-[35px] h-[35p] bg-[#ffe3e2] rounded-md p-1" src="./assets/ambulance.png" alt="">
-                        <img class="w-[32px] h-[32p]" src="./assets/heart.png" alt="">
+                        <img class="w-[32px] h-[32p] heart-icon" src="./assets/heart.png" alt="">
                     </div>
                     <h2 class="card-title text-black text-[20px] font-bold mt-2">Ambulance Service</h2>
                     <p class="text-black text-[17px]">Ambulance</p>
@@ -146,7 +146,7 @@
                 <div class="card-body items-start text-center shadow-2xl w-[360px] h-[300px] rounded-lg">
                     <div class="flex justify-between w-[314px]">
                         <img class="w-[35px] h-[35p] bg-[#ffe3e2] rounded-md p-1" src="./assets/emergency.png" alt="">
-                        <img class="w-[32px] h-[32p]" src="./assets/heart.png" alt="">
+                        <img class="w-[32px] h-[32p] heart-icon" src="./assets/heart.png" alt="">
                     </div>
                     <h2 class="card-title text-black text-[20px] font-bold mt-2">Women & Child Helpline</h2>
                     <p class="text-black text-[17px]">Women & Child Helpline</p>
@@ -166,7 +166,7 @@
                 <div class="card-body items-start text-center shadow-2xl w-[360px] h-[300px] rounded-lg">
                     <div class="flex justify-between w-[314px]">
                         <img class="w-[35px] h-[35p] bg-[#ffe3e2] rounded-md p-1" src="./assets/emergency.png" alt="">
-                        <img class="w-[32px] h-[32p]" src="./assets/heart.png" alt="">
+                        <img class="w-[32px] h-[32p] heart-icon" src="./assets/heart.png" alt="">
                     </div>
                     <h2 class="card-title text-black text-[20px] font-bold mt-2">Anti-Corruption Helpline</h2>
                     <p class="text-black text-[17px]">Anti-Corruption</p>
@@ -186,7 +186,7 @@
                 <div class="card-body items-start text-center shadow-2xl w-[360px] h-[300px] rounded-lg">
                     <div class="flex justify-between w-[314px]">
                         <img class="w-[35px] h-[35p] bg-[#ffe3e2] rounded-md p-1" src="./assets/emergency.png" alt="">
-                        <img class="w-[32px] h-[32p]" src="./assets/heart.png" alt="">
+                        <img class="w-[32px] h-[32p] heart-icon" src="./assets/heart.png" alt="">
                     </div>
                     <h2 class="card-title text-black text-[20px] font-bold mt-2">Electricity Helpline</h2>
                     <p class="text-black text-[17px]">Electricity Outage</p>
@@ -206,7 +206,7 @@
                 <div class="card-body items-start text-center shadow-2xl w-[360px] h-[300px] rounded-lg">
                     <div class="flex justify-between w-[314px]">
                         <img class="w-[35px] h-[35p] bg-[#ffe3e2] rounded-md p-1" src="./assets/brac.png" alt="">
-                        <img class="w-[32px] h-[32p]" src="./assets/heart.png" alt="">
+                        <img class="w-[32px] h-[32p] heart-icon" src="./assets/heart.png" alt="">
                     </div>
                     <h2 class="card-title text-black text-[20px] font-bold mt-2">Brac Helpline</h2>
                     <p class="text-black text-[17px]">Brac</p>
@@ -227,7 +227,7 @@
                     <div class="flex justify-between w-[314px]">
                         <img class="w-[35px] h-[35p] bg-[#ffe3e2] rounded-md p-1" src="./assets/Bangladesh-Railway.png"
                             alt="">
-                        <img class="w-[32px] h-[32p]" src="./assets/heart.png" alt="">
+                        <img class="w-[32px] h-[32p] heart-icon" src="./assets/heart.png" alt="">
                     </div>
                     <h2 class="card-title text-black text-[20px] font-bold mt-2">Bangladesh Railway Helpline </h2>
                     <p class="text-black text-[17px]">Bangladesh Railway</p>
@@ -260,6 +260,8 @@
         </div>
     </div>
     <!-- Service card end  -->
+
+    <script src="index.js"></script>
 </body>
 
 </html>
