--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             </div>
 
 
-            <div class="flex justify-center items-center rounded-full w-[100px] h-[50px] bg-[#41ff6b1a] gap-3 mr-4">
-                <p class="font-semibold ">100 </p>
+            <div id="navbar-coin-count" class="flex justify-center items-center rounded-full w-[100px] h-[50px] bg-[#41ff6b1a] gap-3 mr-4">
+                <p  class="font-semibold ">100 </p>
                 <img class="w-[24px] h-[24px]" src="./assets/coin.png" alt="">
             </div>
             <button class="btn bg-[#00a63e] text-white rounded-full w-[120px] h-[50px]">Copy</button>
@@ -245,8 +245,8 @@
         </div>
 
         <!-- right site -->
-        <div class=" grid-cols-3 my-10 w-[300px]">
-            <div class=" w-[300px] h-[50px] flex justify-between items-center">
+        <div id="call-history" class=" grid-cols-3 my-10 w-[300px]">
+            <div  class=" w-[300px] h-[50px] flex justify-between items-center">
                 <div class="flex items-center gap-2">
                     <i class="fa-regular fa-clock"></i>
                     <h2 class="font-semibold text-[18px]">Call History</h2>
