call history clear js code added

--- a/index.html
+++ b/index.html
@@ -245,18 +245,18 @@
         </div>
 
         <!-- right site -->
-        <div id="call-history" class=" grid-cols-3 my-10 w-[300px]">
-            <div  class=" w-[300px] h-[50px] flex justify-between items-center">
+        <div class=" grid-cols-3 my-10 w-[300px]">
+            <div   class=" w-[300px] h-[50px] flex justify-between items-center">
                 <div class="flex items-center gap-2">
                     <i class="fa-regular fa-clock"></i>
                     <h2 class="font-semibold text-[18px]">Call History</h2>
                 </div>
                 
                 <div>
-                    <button class="btn btn-ghost rounded-full w-[80px] h-[40px] text-white bg-[#00a63e]">Clear</button>
+                    <button id="clear-history-btn" class="btn btn-ghost rounded-full w-[80px] h-[40px] text-white bg-[#00a63e]">Clear</button>
                 </div>
             </div>
-
+            <div id="call-history" class="mt-4"></div>
         </div>
     </div>
     <!-- Service card end  -->
